# python-build-exe-action

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/message_forwarding_server/: main.py
